<resources>
    <string name="app_name">MySmartPostbox</string>
    <string name="button_qr">Select post box</string>
    <string name="text_login">Login</string>
    <string name="button_login">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="playSoundButtonText">Open post box</string>
    <string name="openButtonText">Open</string>
    <string name="button_facelogin">Face login</string>
    <string name="text_welcome">Welcome %s!</string>
    <string name="registerButtonText">Register</string>
    <string name="usernameTVText">Username</string>
    <string name="emailTVText">Email</string>
    <string name="passwordTVText">Password</string>
    <string name="confirmPasswordTVText">Confirm Password</string>
    <string name="registerRedirectButtonText">Register</string>
    <string name="text_selected">You currently have no box selected!</string>
    <string name="text_selected_2">Selected box: %s</string>
    <string name="button_viewlogs">Open history</string>
    <string name="button_logout">Log out</string>
    <string name="button_tsp">TSP</string>
    <string name="button_tspStart">Start</string>
</resources>